commit 32: fixed video, add video to user profile
